--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -1,7 +1,9 @@
 # Question
+
 What's the difference between an `instance` method and a `class` method?
 
 # Answer
 
+An `instance` method can only be invoked on the method while a `class` method can only be invoked on the class. Class methods use the `static` keyword to initialize them.
 
 # Teacher Feedback
