--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -1,9 +1,39 @@
 # Question
+
 In a code snippet, demonstrate inheritance by creating two classes where one is the parent class and one is the child class.
 
 In your code example, create an instance of the child class and reference/invoke a property/method of the parent class.
 
 # Answer
 
+```js
+class Person {
+  constructor(name, age) {
+    this.name = name;
+    this.age = age;
+  }
+  sayHi() {
+    console.log("Hi");
+  }
+
+  eat() {
+    console.log("nom nom nom")
+  }
+}
+
+class ConspiracyTheorist extends Person{
+  constructor(name, age) {
+    super(name, age)
+  };
+
+  super.sayHi() {
+    console.log("If you really think about it the Earth is flat and lizards rule the world.")
+  }
+}
+
+const loco = new ConspiracyTheorist("Billy Bob", 39)
+loco.sayHi()
+loco.eat()
+```
 
 # Teacher Feedback
