--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -1,7 +1,31 @@
 # Question
+
 What is polymorphism? Show an example in a code snippet.
 
 # Answer
 
+Polymorphism is when subclass has a method that has the same name as a method in the superclass but different functionality.
+
+```js
+class Student {
+  constructor(name) {
+    this.name = name;
+  }
+
+  raiseHand() {
+    console.log("🖐️🙂");
+  }
+}
+
+class Nerd extends Student {
+  constructor(name) {
+    super(name);
+  }
+
+  raiseHand() {
+    console.log("☝️🤓");
+  }
+}
+```
 
 # Teacher Feedback
