--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -25,7 +25,7 @@ class ConspiracyTheorist extends Person{
   constructor(name, age) {
     super(name, age)
   };
-
+/** FEEDBACK: You should remove super from here since it would result in an error! You can only invoke the method in that way inside of the function! */
   super.sayHi() {
     console.log("If you really think about it the Earth is flat and lizards rule the world.")
   }
@@ -37,3 +37,7 @@ loco.eat()
 ```
 
 # Teacher Feedback
+
+Good job! I left some feedback on a very important note!!!!!
+
+Score: 3/3
