--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -7,3 +7,7 @@ What's the difference between an `instance` method and a `class` method?
 An `instance` method can only be invoked on the method while a `class` method can only be invoked on the class. Class methods use the `static` keyword to initialize them.
 
 # Teacher Feedback
+
+So close, `class` methods can be invoked by both the class and instance! 
+
+Score: 2/3
